<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cdT"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="6dp"
            tools:ignore="UselessParent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iconImageView"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                app:srcCompat="@drawable/ic_launcher_background"
                tools:ignore="ImageContrastCheck" />

            <LinearLayout
                android:id="@+id/textLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@+id/iconImageView"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nameView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="2dp"
                    android:ellipsize="end"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:text="@string/nombre"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="3dp"
                    android:maxLines="1">

                    <TextView
                        android:id="@+id/userNameView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="2dp"
                        android:ellipsize="end"
                        android:maxLength="16"
                        android:text="@string/nombreusuario"
                        android:textColor="#8c8c8c"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/separatorView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="2dp"
                        android:ellipsize="end"
                        android:text="@string/separator"
                        android:textColor="#8c8c8c"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/timeView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:ellipsize="end"
                        android:text="@string/tiempo"
                        android:textColor="#8c8c8c"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tweetView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:maxLength="280"
                    android:text="@string/descriptionTweet"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tweetID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/descriptionTweet"
                    android:visibility="gone" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="0.8dp"
                    android:background="#8c8c8c"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp">

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/buttons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/share"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/ic_baseline_share_24"
                        android:contentDescription="@string/compartir"
                        android:layout_marginEnd="5dp"
                        android:scaleType="centerCrop"
                        android:onClick="compartirPost"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.25"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="MissingConstraints,TouchTargetSizeCheck,UsingOnClickInXml"
                        tools:layout_editor_absoluteY="3dp"
                        android:tag=""/>

                    <ImageButton
                        android:id="@+id/save"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:contentDescription="@string/guardartweet"
                        android:background="@drawable/saved"
                        android:layout_marginStart="5dp"
                        android:scaleType="centerCrop"
                        android:onClick="addPostToCarpeta"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.75"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="MissingConstraints, TouchTargetSizeCheck"
                        tools:layout_editor_absoluteY="3dp"
                        android:tag=""/>
                </androidx.constraintlayout.widget.ConstraintLayout >
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>