<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailTweet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="6dp"
            tools:ignore="UselessParent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iconImageViewDetailTweet"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                app:srcCompat="@drawable/ic_launcher_background"
                tools:ignore="ImageContrastCheck" />

            <ScrollView
                android:layout_below="@+id/iconImageViewDetailTweet"
                android:layout_above="@+id/buttonDeatilTweetLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:id="@+id/textDeatilTweetLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="6dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tweetViewDetailTweet"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/descriptionTweet"
                            android:textSize="22sp"
                            android:textStyle="bold"
                            tools:ignore="MissingConstraints" />
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>

            <LinearLayout
                android:id="@+id/textUserLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@+id/iconImageViewDetailTweet"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/nameViewDetailTweet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="2dp"
                        android:ellipsize="end"
                        android:maxLength="50"
                        android:maxLines="1"
                        android:text="@string/nombre"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/userNameViewDetailTweet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="2dp"
                        android:ellipsize="end"
                        android:maxLength="16"
                        android:text="@string/nombreusuario"
                        android:textColor="#8c8c8c"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tweetID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/descriptionTweet"
                    android:visibility="gone" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/buttonDeatilTweetLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="4dp"
                android:layout_alignParentBottom="true"
                android:orientation="vertical">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp">

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/buttons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/shareDetailTweet"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/ic_baseline_share_24"
                        android:contentDescription="@string/compartir"
                        android:onClick="compartirPost"
                        android:scaleType="centerCrop"
                        android:tag=""
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.25"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="MissingConstraints,TouchTargetSizeCheck,UsingOnClickInXml"
                        tools:layout_editor_absoluteY="3dp" />

                    <ImageButton
                        android:id="@+id/saveDetailTweet"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginStart="5dp"
                        android:background="@drawable/not_saved"
                        android:contentDescription="@string/guardartweet"
                        android:onClick="addPostToCarpetaTweet"
                        android:scaleType="centerCrop"
                        android:tag=""
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.75"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="MissingConstraints, TouchTargetSizeCheck"
                        tools:layout_editor_absoluteY="3dp" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>